# CS234_Math_Solver

./: .gitignore  A3C.py  CMeta.py  CTrainer.py  Crun.py  MathConstants.py  MetaLearner.py  MetaLearning.py  MetaLearningOld.py  README.md  Untitled.ipynb  Validate.py  curriculumModel.py  curriculumTrainer.py  dataset.py  dataset_utils.py  generate_answers.py  generator.py  old_dataset.py  parameters.py  requirements.txt  run.py  runCurriculum.py  runMAST.py  runMeta.py  tensorboard_utils.py  test-meta.ipynb  training.py  transformers-2.5.1-py3-none-any.whl  utils.py  valid.py  validate.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  test-meta-checkpoint.ipynb
generator/: Untitled.ipynb  main.py  pyproject.toml  requirements.txt  util.py
runs/math_ds_full_mle_2020-25-02_mle_train/: events.out.tfevents.1582664988
transformer/: A3C.py  Constants.py  Models.py  __init__.py  bart.py  configuration_bart.py  run.py
