[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["Alekxos <mckeehan@stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
absl-py = "^0.9.0"
numpy = "^1.18"
six = "^1.14"
sympy = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
